fix: notebook updated according to the course

--- a/seminar_01/intro.ipynb
+++ b/seminar_01/intro.ipynb
@@ -714,27 +714,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Bonus: my1stNN\n",
-    "Your ultimate task for this week is to build your first neural network [almost] from scratch and pure tensorflow.\n",
-    "\n",
-    "This time you will same digit recognition problem, but at a larger scale\n",
-    "* images are now 28x28\n",
-    "* 10 different digits\n",
-    "* 50k samples\n",
-    "\n",
-    "Note that you are not required to build 152-layer monsters here. A 2-layer (one hidden, one output) NN should already have ive you an edge over logistic regression.\n",
-    "\n",
-    "__[bonus score]__\n",
-    "If you've already beaten logistic regression with a two-layer net, but enthusiasm still ain't gone, you can try improving the test accuracy even further! The milestones would be 95%/97.5%/98.5% accuraсy on test set.\n",
-    "\n",
-    "__SPOILER!__\n",
-    "At the end of the notebook you will find a few tips and frequently made mistakes. If you feel enough might to shoot yourself in the foot without external assistance, we encourage you to do so, but if you encounter any unsurpassable issues, please do look there before mailing us."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -742,140 +721,8 @@
    },
    "outputs": [],
    "source": [
-    "from mnist import load_dataset\n",
-    "\n",
-    "#[down]loading the original MNIST dataset.\n",
-    "#Please note that you should only train your NN on _train sample,\n",
-    "# _val can be used to evaluate out-of-sample error, compare models or perform early-stopping\n",
-    "# _test should be hidden under a rock untill final evaluation... \n",
-    "# But we both know it is near impossible to catch you evaluating on it.\n",
-    "X_train,y_train,X_val,y_val,X_test,y_test = load_dataset()\n",
-    "\n",
-    "print (X_train.shape,y_train.shape)"
+    "plt.imshow(weights.eval().reshape([8,8]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "plt.imshow(X_train[0,0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "<here you could just as well create computation graph>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "<this may or may not be a good place to evaluating loss and optimizer>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "<this may be a perfect cell to write a training&evaluation loop in>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "<predict & evaluate on test here, right? No cheating pls.>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```\n",
-    "\n",
-    "```\n",
-    "\n",
-    "```\n",
-    "\n",
-    "```\n",
-    "\n",
-    "```\n",
-    "\n",
-    "```\n",
-    "\n",
-    "```\n",
-    "\n",
-    "```\n",
-    "\n",
-    "```\n",
-    "\n",
-    "```\n",
-    "\n",
-    "```\n",
-    "\n",
-    "```\n",
-    "\n",
-    "```\n",
-    "\n",
-    "```\n",
-    "\n",
-    "```\n",
-    "\n",
-    "```\n",
-    "\n",
-    "\n",
-    "# SPOILERS!\n",
-    "\n",
-    "Recommended pipeline\n",
-    "\n",
-    "* Adapt logistic regression from previous assignment to classify some number against others (e.g. zero vs nonzero)\n",
-    "* Generalize it to multiclass logistic regression.\n",
-    "  - Either try to remember lecture 0 or google it.\n",
-    "  - Instead of weight vector you'll have to use matrix (feature_id x class_id)\n",
-    "  - softmax (exp over sum of exps) can implemented manually or as T.nnet.softmax (stable)\n",
-    "  - probably better to use STOCHASTIC gradient descent (minibatch)\n",
-    "    - in which case sample should probably be shuffled (or use random subsamples on each iteration)\n",
-    "* Add a hidden layer. Now your logistic regression uses hidden neurons instead of inputs.\n",
-    "  - Hidden layer uses the same math as output layer (ex-logistic regression), but uses some nonlinearity (sigmoid) instead of softmax\n",
-    "  - You need to train both layers, not just output layer :)\n",
-    "  - Do not initialize layers with zeros (due to symmetry effects). A gaussian noize with small sigma will do.\n",
-    "  - 50 hidden neurons and a sigmoid nonlinearity will do for a start. Many ways to improve. \n",
-    "  - In ideal casae this totals to 2 .dot's, 1 softmax and 1 sigmoid\n",
-    "  - __make sure this neural network works better than logistic regression__\n",
-    "  \n",
-    "* Now's the time to try improving the network. Consider layers (size, neuron count),  nonlinearities, optimization methods, initialization - whatever you want, but please avoid convolutions for now."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
