fix: removed shared_weights

--- a/seminar_01/intro.ipynb
+++ b/seminar_01/intro.ipynb
@@ -709,18 +709,7 @@
     "\n",
     "    \n",
     "print (\"resulting weights:\")\n",
-    "plt.imshow(shared_weights.get_value().reshape(8, -1))\n",
-    "plt.colorbar();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "plt.colorbar()\n",
     "plt.imshow(weights.eval().reshape([8,8]))"
    ]
   }
@@ -741,7 +730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
