Исправил баг при обучении

--- a/seminar_02/embeddings.ipynb
+++ b/seminar_02/embeddings.ipynb
@@ -265,7 +265,6 @@
     "\n",
     "print(\"data: {0}\".format(data[:10]))\n",
     "print(\"count: {0}\".format(count[:10]))\n",
-    "print(\"word_to_index: {0}\".format(list(word_to_index.items())[:10]))\n",
     "print(\"index_to_word: {0}\".format(list(index_to_word.items())[:10]))"
    ]
   },
@@ -304,7 +303,7 @@
     "print(\"data = {0}\".format([index_to_word[each] for each in data[:16]]))\n",
     "data_index, data_size, batch_size = 0, len(data), 4\n",
     "for bag_window in [1, 2]:\n",
-    "    _, batch, labels = generate_batch(data_index, data_size, batch_size, bag_window)\n",
+    "    data_index, batch, labels = generate_batch(data_index, data_size, batch_size, bag_window)\n",
     "    print(\"bag_window = {0}\".format(bag_window))\n",
     "    print(\"batch = {0}\".format([[index_to_word[index] for index in each] for each in batch]))\n",
     "    print(\"labels = {0}\\n\".format([index_to_word[each] for each in labels.reshape(4)]))"
@@ -422,7 +421,7 @@
     "        average_loss = 0\n",
     "\n",
     "        for step in range(num_steps):\n",
-    "            _, batch, labels = generate_batch(data_index, data_size, batch_size, bag_window)\n",
+    "            data_index, batch, labels = generate_batch(data_index, data_size, batch_size, bag_window)\n",
     "            feed_dict = { train_data: batch, train_labels: labels }\n",
     "            _, current_loss = sess.run([optimizer, loss], feed_dict = feed_dict)\n",
     "            average_loss += current_loss\n",
