--- a/seminar_02/embeddings.ipynb
+++ b/seminar_02/embeddings.ipynb
@@ -397,6 +397,7 @@
    "source": [
     "%%time\n",
     "num_steps = 50000\n",
+    "loss_every_nsteps = 200\n",
     "from IPython.display import clear_output\n",
     "\n",
     "\n",
@@ -411,9 +412,9 @@
     "            feed_dict = { train_data: batch, train_labels: labels }\n",
     "            _, current_loss = sess.run([optimizer, loss], feed_dict = feed_dict)\n",
     "            average_loss += current_loss\n",
-    "            if step % 200 == 0:\n",
+    "            if step % loss_every_nsteps == 0:\n",
     "                if step > 0:\n",
-    "                    average_loss = average_loss / 200\n",
+    "                    average_loss = average_loss / loss_every_nsteps\n",
     "                    clear_output(True)\n",
     "                    print (\"step = {0}, average_loss = {1}\".format(step, average_loss))\n",
     "                    average_loss = 0\n",
