FIX: right images

--- a/seminar_04/simple_nn.ipynb
+++ b/seminar_04/simple_nn.ipynb
@@ -53,8 +53,7 @@
    "metadata": {},
    "source": [
     "<h2 align=\"center\">BackProp and Optimizers</h2>\n",
-    "\n",
-    "<img src=\"img/gc.png\" width=\"600\">"
+    "<img src=\"img/bp.png\" width=\"600\">"
    ]
   },
   {
@@ -86,7 +85,7 @@
     "collapsed": true
    },
    "source": [
-    "<img src=\"seminar_04/img/gc.png\" width=\"600\">"
+    "<img src=\"img/gc.png\" width=\"600\">"
    ]
   },
   {
