Migrate from python 2 to python 3

--- a/seminar_04/simple_nn.ipynb
+++ b/seminar_04/simple_nn.ipynb
@@ -144,7 +144,7 @@
    },
    "outputs": [],
    "source": [
-    "print 'loss is a scalar\\n', loss(np.random.random((10, 3)))"
+    "print('loss is a scalar\\n', loss(np.random.random((10, 3))))"
    ]
   },
   {
@@ -155,7 +155,7 @@
    },
    "outputs": [],
    "source": [
-    "print 'gradient is a matrix with shape 10x3\\n', dx(np.random.random((10, 3)))"
+    "print('gradient is a matrix with shape 10x3\\n', dx(np.random.random((10, 3))))"
    ]
   },
   {
@@ -166,7 +166,7 @@
    },
    "outputs": [],
    "source": [
-    "print 'difference should be ~10e-8', check_grad(loss, dx, np.random.random((10, 3)).reshape(-1))"
+    "print('difference should be ~10e-8', check_grad(loss, dx, np.random.random((10, 3)).reshape(-1)))"
    ]
   },
   {
@@ -242,8 +242,8 @@
     "                        [ 3.25553199,  3.5141327,   3.77273342]])\n",
     "\n",
     "# Compare your output with ours. The error should be around 1e-9.\n",
-    "print 'Testing affine_forward function:'\n",
-    "print 'difference: ', rel_error(out, correct_out)"
+    "print('Testing affine_forward function:')\n",
+    "print('difference: ', rel_error(out, correct_out))"
    ]
   },
   {
@@ -304,10 +304,10 @@
     "dx, dw, db = affine_backward(dout, cache)\n",
     "\n",
     "# The error should be around 1e-10\n",
-    "print 'Testing affine_backward function:'\n",
-    "print 'dx error: ', rel_error(dx_num, dx)\n",
-    "print 'dw error: ', rel_error(dw_num, dw)\n",
-    "print 'db error: ', rel_error(db_num, db)"
+    "print('Testing affine_backward function:')\n",
+    "print('dx error: ', rel_error(dx_num, dx))\n",
+    "print('dw error: ', rel_error(dw_num, dw))\n",
+    "print('db error: ', rel_error(db_num, db))"
    ]
   },
   {
@@ -368,8 +368,8 @@
     "                        [ 0.22727273,  0.31818182,  0.40909091,  0.5,       ]])\n",
     "\n",
     "# Compare your output with ours. The error should be around 1e-8\n",
-    "print 'Testing relu_forward function:'\n",
-    "print 'difference: ', rel_error(out, correct_out)"
+    "print('Testing relu_forward function:')\n",
+    "print('difference: ', rel_error(out, correct_out))"
    ]
   },
   {
@@ -419,8 +419,8 @@
     "dx = relu_backward(dout, cache)\n",
     "\n",
     "# The error should be around 1e-12\n",
-    "print 'Testing relu_backward function:'\n",
-    "print 'dx error: ', rel_error(dx_num, dx)"
+    "print('Testing relu_backward function:')\n",
+    "print('dx error: ', rel_error(dx_num, dx))"
    ]
   },
   {
@@ -493,10 +493,8 @@
     "    y_pred = ...\n",
     "    \n",
     "    if i % 1000 == 0:\n",
-    "        print 'epoch %s:' % i, \n",
-    "        print '\\t tr_loss %.2f' % tr_loss,\n",
-    "        print '\\t te_loss %.2f' % te_loss,\n",
-    "        print '\\t te_acc %s' % accuracy_score(y_pred, y_test)"
+    "        print('epoch {}: \\t tr_loss {:.2f} \\t te_loss {:.2f} \\t te_acc {}'.\n",
+    "              format(i, tr_loss , te_loss, accuracy_score(y_pred, y_test)))"
    ]
   },
   {
