--- a/seminar_06/RNN_intro.ipynb
+++ b/seminar_06/RNN_intro.ipynb
@@ -1116,9 +1116,10 @@
     "**[extra points]**\n",
     "\n",
     "* Multi-layer (MultiRNNCell)\n",
-    "* Try to generate tweets, using [this](http://study.mokoron.com) dataset\n",
-    "* Try to generate fibbonacci numbers\n",
-    "* Try to measure maximum length of dependency (how much vanishing gradients affect RNN and LSTM), for example try to predict n-th previous symbol\n",
+    "* Generate tweets, using [this](http://study.mokoron.com) dataset\n",
+    "* Gemerate texts using your favotive books / movie series / wikipedia articles as train set\n",
+    "* Generate fibbonacci numbers\n",
+    "* Measure maximum length of dependency (how much vanishing gradients affect RNN and LSTM), for example try to predict n-th previous symbol\n",
     "* Compare different initialization schemes and nonlinearities\n",
     "* Etc."
    ]
