--- a/seminar_06/RNN_intro.ipynb
+++ b/seminar_06/RNN_intro.ipynb
@@ -1117,7 +1117,7 @@
     "\n",
     "* Multi-layer (MultiRNNCell)\n",
     "* Generate tweets, using [this](http://study.mokoron.com) dataset\n",
-    "* Gemerate texts using your favotive books / movie series / wikipedia articles as train set\n",
+    "* Generate texts using your favotive books / movie series / wikipedia articles as train set\n",
     "* Generate fibbonacci numbers\n",
     "* Measure maximum length of dependency (how much vanishing gradients affect RNN and LSTM), for example try to predict n-th previous symbol\n",
     "* Compare different initialization schemes and nonlinearities\n",
