--- a/seminar_06/RNN_intro.ipynb
+++ b/seminar_06/RNN_intro.ipynb
@@ -48,23 +48,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Outline\n",
-    "\n",
-    "* [RNN recap](#RNN-recap)\n",
-    "    - [Task1](#Task1)\n",
-    "    - [Dynamic RNN](#Dynamic-RNN)\n",
-    "* [Generate names with RNN](#Name-generation)\n",
-    "    - [Task2](#Task2)\n",
-    "* [SRU implementation](#SRU-implementation)\n",
-    "    - [Task3](#Task3)\n",
-    "* [Bonus part](#Bonus-part)\n",
-    "* [How to evaluate the work](#How-to-evaluate-the-work)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# RNN recap\n",
     "\n",
     "<img src=\"./pics/rnn.png\" width=\"90%\">\n",
@@ -266,7 +249,7 @@
    "source": [
     "# Dynamic RNN\n",
     "\n",
-    "In TensorFlow there is a function `tf.rnn.static_rnn` which create for each time step (unrolling) specific cell of desired type. Our implementation follows `tf.nn.rnn_cell.BasicRNNCell`. This implementation has such a drawback - we could need a lot of memory for long sequences. And because we want to work with such sequences we need to allocate a lot of memory at once. But in TF there is another option -- `dynamic_rnn`, where memory is allocated dynamically for each provided sequence, acording to its length.\n",
+    "In TensorFlow there is a function `tf.nn.static_rnn` which create for each time step (unrolling) specific cell of desired type. Our implementation follows `tf.nn.rnn_cell.BasicRNNCell`. This implementation has such a drawback - we could need a lot of memory for long sequences. And because we want to work with such sequences we need to allocate a lot of memory at once. But in TF there is another option -- `dynamic_rnn`, where memory is allocated dynamically for each provided sequence, acording to its length.\n",
     "\n",
     "Lets rewrite the code with `dynamic_rnn`."
    ]
@@ -690,7 +673,7 @@
     "self._embedding_mtx = <create matrix of embeddings>\n",
     "embed = < embed the input sequence >\n",
     "\n",
-    "self._cell = cell_class(**cell_params_dict)\n",
+    "cell = cell_class(**cell_params_dict)\n",
     "\n",
     "rnn_outputs, states = tf.nn.dynamic_rnn(< choose params >)\n",
     "self._pred_logits = < make logits >\n",
@@ -842,7 +825,7 @@
     "            self._embedding_mtx = <create matrix of embeddings>\n",
     "            embed = < embed the input sequence >\n",
     "            \n",
-    "            self._cell = cell_class(**cell_params_dict)\n",
+    "            cell = cell_class(**cell_params_dict)\n",
     "\n",
     "            rnn_outputs, states = tf.nn.dynamic_rnn(< choose params >)\n",
     "            self._pred_logits = < make logits >\n",
@@ -1141,7 +1124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
