--- a/seminar_01/intro.ipynb
+++ b/seminar_01/intro.ipynb
@@ -30,7 +30,15 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import tensorflow as tf\n",
+    "\n",
+    "from sklearn.metrics import roc_auc_score, mean_squared_error\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
     "gpu_options = tf.GPUOptions(allow_growth=True, per_process_gpu_memory_fraction=0.1)\n",
     "s = tf.InteractiveSession(config=tf.ConfigProto(gpu_options=gpu_options))"
    ]
@@ -63,7 +71,6 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "def sum_squares(N):\n",
     "    return <student.Implement_me()>"
    ]
@@ -201,6 +208,13 @@
     "\n",
     "#difference between squared vector and vector itself\n",
     "vector_squares = input_vector**2 - input_vector\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**[1 point max]**"
    ]
   },
   {
@@ -356,8 +370,6 @@
    "outputs": [],
    "source": [
     "# Tests\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "\n",
     "for n in [1,5,10,10**3]:\n",
     "    \n",
     "    elems = [np.arange(n),np.arange(n,0,-1), np.zeros(n),\n",
@@ -472,9 +484,6 @@
    },
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
-    "\n",
     "x = np.linspace(-3,3)\n",
     "x_squared, x_squared_der = s.run([scalar_squared,derivative],\n",
     "                                 {my_scalar:x})\n",
@@ -489,6 +498,13 @@
    "metadata": {},
    "source": [
     "# Why that rocks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**[2 points max]**"
    ]
   },
   {
@@ -540,7 +556,9 @@
    "source": [
     "# Almost done - optimizers\n",
     "\n",
-    "While you can perform gradient descent by hand with automatic grads from above, tensorflow also has some optimization methods implemented for you. Recall momentum & rmsprop?"
+    "While you can perform gradient descent by hand with automatic grads from above, tensorflow also has some optimization methods implemented for you.\n",
+    "\n",
+    "You can try different optimizers (eg. GradientDescentOptimizer, MomentumOptimizer, AdamOptimizer) and combine their trajectories on one plot (don't forget the legend). **[1 extra point]**"
    ]
   },
   {
@@ -604,6 +622,13 @@
     " \n",
     "We shall train on a two-class MNIST dataset\n",
     "* please note that target `y` are `{0,1}` and not `{-1,1}` as in some formulae"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**[5 points max]**"
    ]
   },
   {
@@ -684,7 +709,6 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y)"
    ]
   },
@@ -696,8 +720,6 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.metrics import roc_auc_score\n",
-    "\n",
     "for i in range(5):\n",
     "    <run optimizer operation>\n",
     "    loss_i = <compute loss at iteration i>\n",
@@ -730,9 +752,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
