--- a/seminar_02/embeddings.ipynb
+++ b/seminar_02/embeddings.ipynb
@@ -310,7 +310,8 @@
     "* Each sample in the batch has a number of words equal to __`bag_window * 2`__\n",
     "___\n",
     "\n",
-    "# CBOW architecture\n"
+    "# CBOW architecture\n",
+    "**[5 points max]**"
    ]
   },
   {
@@ -372,6 +373,7 @@
    "metadata": {},
    "source": [
     "## Optional\n",
+    "**[extra points]**\n",
     "\n",
     "You may use [NCE(Noise Contrastive Estimation)](https://www.tensorflow.org/api_docs/python/tf/nn/nce_loss) loss instead of softmax with cross entropy.\n",
     "\n",
@@ -542,9 +544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task\n",
-    "\n",
-    "Your task is to implement `skip-gram` model, using code above.\n",
+    "# Skip-gram architecture\n",
     "\n",
     "This approach is nicely illustrated with this figure:\n",
     "\n",
@@ -553,7 +553,9 @@
     "\n",
     "I.e. our model takes `central word` and should produce class in softmax, which corresponds to `context word`.\n",
     "\n",
-    "The difference between two models is not that big after all, so good luck with coding!"
+    "The difference between two models is not that big after all, so good luck with coding!\n",
+    "\n",
+    "**[5 points]**"
    ]
   },
   {
@@ -957,7 +959,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
