--- a/seminar_04/simple_nn.ipynb
+++ b/seminar_04/simple_nn.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "Credit cs231n.stanford.edu"
    ]
@@ -81,9 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "<img src=\"img/gc.png\" width=\"600\">"
    ]
@@ -92,9 +88,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Softmax Loss Layer</h3>\n",
+    "<h3>Softmax Loss Layer</h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**[4 points max]**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You’ve heard of the binary Logistic Regression classifier before, the Softmax classifier is its generalization to multiple classes. Unlike the SVM which treats the outputs $f( x_i , W )$  as (uncalibrated and possibly difficult to interpret) scores for each class, the Softmax classifier gives a slightly more intuitive output (normalized class probabilities) and also has a probabilistic interpretation that we will describe shortly. In the Softmax classifier, the function mapping $f(x_i;W)=W x_i$  stays unchanged, but we now interpret these scores as the unnormalized log probabilities for each class and replace the hinge loss with a cross-entropy loss that has the form:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"./img/loss.png\" width=\"300\">\n",
     "<img src=\"./img/log.png\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Where we are using the notation $f_j$ to mean the j-th element of the vector of class scores $f$. As before, the full loss for the dataset is the mean of $L_i$  over all training examples together with a regularization term $R ( W )$. The function $f_j(z) = \\frac{e^{z_j}}{\\sum_{k}{e^{z_k}}}$ is called the **softmax function**: It takes a vector of arbitrary real-valued scores (in $z$) and squashes it to a vector of values between zero and one that sum to one. The full cross-entropy loss that involves the softmax function might look scary if you’re seeing it for the first time but it is relatively easy to motivate.\n",
+    "\n",
+    "You can read more [here](http://cs231n.github.io/linear-classify/#softmax)."
    ]
   },
   {
@@ -174,7 +199,8 @@
    "metadata": {},
    "source": [
     "<h3>Dense Layer</h3>\n",
-    "<img src=\"img/lin.png\" width=\"300\">"
+    "<img src=\"img/lin.png\" width=\"300\">\n",
+    "**[3 points max]**"
    ]
   },
   {
@@ -316,7 +342,9 @@
    "source": [
     "<h3>ReLu Layer</h3>\n",
     "\n",
-    "$$ReLu(x) = max(0, x)$$"
+    "$$ReLu(x) = max(0, x)$$\n",
+    "\n",
+    "**[1 point max]**"
    ]
   },
   {
@@ -427,7 +455,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Two Layer Fully Connected Neural Net with SGD</h3>"
+    "### Inline Question:\n",
+    "\n",
+    "We've only asked you to implement ReLU, but there are a number of different activation functions that one could use in neural networks, each with its pros and cons. In particular, an issue commonly seen with activation functions is getting zero (or close to zero) gradient flow during backpropagation. Which of the following activation functions have this problem? If you consider these functions in the one dimensional case, what types of input would lead to this behaviour?\n",
+    "\n",
+    "1. Sigmoid\n",
+    "1. ReLU\n",
+    "1. Leaky ReLU"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Answer:\n",
+    "\n",
+    "answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Two Layer Fully Connected Neural Net with SGD</h3>\n",
+    "**[2 points max]**"
    ]
   },
   {
@@ -510,21 +561,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:python2]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-python2-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
